[build-system]
requires = ["setuptools>=68.0", "pybind11>=2.11", "cmake>=3.16"]
build-backend = "setuptools.build_meta"

[project]
name = "kworker"
version = "0.1.0"
description = "Kubernetes-native distributed task processor with C++ scheduling engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jaswanth Gowd Addanki", email = "jaswanth.addanki903@gmail.com"},
]

dependencies = [
    "redis>=5.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
worker = [
    "redis>=5.0",
    "prometheus-client>=0.20",
]
api = [
    "redis>=5.0",
    "prometheus-client>=0.20",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
    "pybind11>=2.11",
]

[project.scripts]
kworker-worker = "kworker.worker:run_worker"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
